--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -84,3 +84,9 @@ button:hover{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     
   }
+
+  p{
+    color: #D91E1E;
+    font-size: 12px;
+    
+  }
