--- a/src/components/LeafleatMap/styles.css
+++ b/src/components/LeafleatMap/styles.css
@@ -5,5 +5,9 @@
 }
 
 .coment-session {
-    margin: 50px 0 0 80px
+    margin: 50px 200px 0 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
