--- a/src/components/UserPerfil/styles.css
+++ b/src/components/UserPerfil/styles.css
@@ -6,7 +6,7 @@
     gap: 8px;
     padding: 5px 10px;
     margin: 0;
-    background-color: #cfcfcf;
+    background-color: #e6e6e6;
     border-radius: 20%;
 }
 
