--- a/src/components/CardNavigateSection/styles.css
+++ b/src/components/CardNavigateSection/styles.css
@@ -3,11 +3,28 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    max-width: 200px;
+    margin-bottom: 150px;
+    text-align: center;
+    transition: .4s;
+}
+
+.cardnavigation-container:hover {
+    scale: 1.04;
+    transition: .4s;
 }
 
 .cardnavigation-container > div {
     border: 1.5px #222 solid;
+    background-color: #e6e6e6;
     border-radius: 5px;
     display: flex;
+    min-height: 220px;
     flex-direction: column;
+}
+
+.cardnavigation-container > div > p {
+    margin-top: 30px;
+    font-size: .95rem;
+    padding: 0 10px;
 }
