--- a/src/components/NaviagteSection/styles.css
+++ b/src/components/NaviagteSection/styles.css
@@ -1,3 +1,18 @@
+.navigationsection-container {
+    margin-top: 100px;
+}
+
+.other-functions-contaner {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10%;
+    margin-top: 50px;
+}
+
+.other-functions-contaner > a {
+    color: #222;
+}
 
 .title-navigatesection {
     text-align: center;
