fix: ajustes na estrutura

--- a/src/components/CardNavigateSection/styles.css
+++ b/src/components/CardNavigateSection/styles.css
@@ -16,7 +16,7 @@
 
 .cardnavigation-container > div {
     border: 1.5px #222 solid;
-    background-color: #e6e6e6;
+    background-color: #f3f3f3;
     border-radius: 5px;
     display: flex;
     min-height: 220px;
