--- a/frontend/src/pages/Cadastro/styles.css
+++ b/frontend/src/pages/Cadastro/styles.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 20px;
-    background: linear-gradient(100deg, #D91E1E, #ec7676);
+    background: #E4E4E4;
 
  
 }
@@ -74,4 +74,7 @@
 .cadastro-error-message{
     color: #D91E1E;
     font-size: 12px;
+}
+.Cadastro-count{
+    margin-left: 85px;
 }
