--- a/frontend/src/components/LeafleatMap/styles.css
+++ b/frontend/src/components/LeafleatMap/styles.css
@@ -13,3 +13,89 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.configuration-container {
+    padding: 0 200px;
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    margin: 0;
+}
+
+.configuration-container button {
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 2px;
+    cursor: pointer;
+    min-width: 150px;
+}
+
+.configuration-container > button {
+    background-color: #444;
+}
+
+.configuration-container > div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+.configuration-container > div button {
+    background-color: #777777;
+    font-weight: normal;
+}
+
+.add-local {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #666;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.add-local > form {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.add-local > form > div > div {
+    display: flex;
+    flex-direction: column;
+    font-size: .9rem;
+}
+
+.add-local > form div input {
+    border: 1px #333 solid;
+    border-width: 0 0 1px;
+    height: 25px;
+}
+
+.add-local > form > div {
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.add-local > form input:focus {
+    border: none;
+    border-width: 0;
+}
+
+.add-local button {
+    align-self: flex-start;
+    margin-top: 30px;
+    color: #333;
+}
+
+.display-none {
+    display: none;
+    opacity: 0;
+}
+
+.point-info > p{
+    font-size: .8rem;
+    font-weight: 800;
+}
